--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vui-state",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "npm module that provides session state related functions for inclusion into other vui-xxx projects.",
   "main": "index.js",
   "scripts": {
@@ -22,9 +22,9 @@
   "keywords": [
     "vui",
     "alexa",
-    "state"
+    "state",
+    "session state"
   ],
   "dependencies": {
-    "vui-session": "0.0.2"
   }
 }
